# adventofcode-2020

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
src/adventofcode_2020/: __init__.py  __main__.py  day_1.py  day_10.py  day_11.py  day_12.py  day_2.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  utils.py
tests/: __init__.py  test_day_1.py  test_day_10.py  test_day_11.py  test_day_12.py  test_day_2.py  test_day_3.py  test_day_4.py  test_day_5.py  test_day_6.py  test_day_7.py  test_day_8.py  test_day_9.py  test_main.py
