[tool.poetry]
name = "adventofcode-2020"
version = "0.0.0"
description = "Advent Of Code 2020"
authors = ["Erik van der Goetz <erik.vandergoetz@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/Erik-vdg/adventofcode-2020"
repository = "https://github.com/Erik-vdg/adventofcode-2020"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/Erik-vdg/adventofcode-2020/releases"

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.0"
attrs = "^20.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
safety = "^1.9.0"
mypy = "^0.790"
typeguard = "^2.9.1"
xdoctest = {extras = ["colors"], version = "^0.15.0"}
pre-commit = "^2.8.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.5.5"
reorder-python-imports = "^2.3.6"
pre-commit-hooks = "^3.3.0"
Pygments = "^2.7.2"
flake8-black = "^0.2.1"
advent-of-code-data = "^0.9.3"
rope = "^0.18.0"

[tool.poetry.scripts]
adventofcode-2020 = "adventofcode_2020.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["adventofcode_2020"]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
